--- a/index.html
+++ b/index.html
@@ -2,6 +2,22 @@
 <html>
 <head>
   <title>Riding SideSaddle*</title>
+
+  <style>
+    html {
+      align-items: center;
+      -webkit-align-items: center;
+      background: url('images/cover.jpg') no-repeat fixed right;
+      background-size: cover;
+      color: red;
+      display: flex;
+      display: -webkit-flex;
+      flex-direction: column;
+      -webkit-flex-direction: column;
+      font-family: sans-serif;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
   <h1>Riding SideSaddle*</h1>
