--- a/index.html
+++ b/index.html
@@ -5,22 +5,24 @@
 
   <style>
     html {
-      align-items: center;
-      -webkit-align-items: center;
       background: url('images/cover.jpg') no-repeat fixed right;
       background-size: cover;
       color: red;
       display: flex;
-      display: -webkit-flex;
       flex-direction: column;
-      -webkit-flex-direction: column;
+      justify-content: center;
       font-family: sans-serif;
+    }
+
+    body {
+      background: rgba(255, 255, 255, .5);
+      flex: 1;
       text-align: center;
     }
   </style>
 </head>
 <body>
   <h1>Riding SideSaddle*</h1>
-  <h2>by <strong>Eric M. Suzanne</strong></h2>
+  <p>by <strong>Eric M. Suzanne</strong></p>
 </body>
 </html>
