--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       color: red;
       display: flex;
       flex-direction: column;
+      height: 100%;
       justify-content: center;
       font-family: sans-serif;
     }
