--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
   <style>
     html {
+      align-items: center;
       background: url('images/cover.jpg') no-repeat fixed right;
       background-size: cover;
       color: red;
@@ -17,7 +18,6 @@
 
     body {
       background: rgba(255, 255, 255, .5);
-      flex: 1;
       text-align: center;
     }
   </style>
