Design like for realz

--- a/index.html
+++ b/index.html
@@ -8,22 +8,43 @@
       align-items: center;
       background: url('images/cover.jpg') no-repeat fixed right;
       background-size: cover;
-      color: red;
       display: flex;
       flex-direction: column;
       height: 100%;
       justify-content: center;
       font-family: sans-serif;
+      font-size: 100%;
+      line-height: 1.5em;
     }
 
     body {
-      background: rgba(255, 255, 255, .5);
+      background: rgba(255, 255, 255, .75);
+      padding: 1rem;
       text-align: center;
+      text-shadow: 0 1px 0 #fff;
+    }
+
+    h1 {
+      color: red;
+      font-size: 4rem;
+      font-size: 8vmin;
+      line-height: 4.5rem;
+      line-height: 9vmin;
+      margin: 0;
+    }
+
+    p {
+      margin: 0;
+    }
+
+    a {
+      color: #000;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
   <h1>Riding SideSaddle*</h1>
-  <p>by <strong>Eric M. Suzanne</strong></p>
+  <p>a novel by <a href="http://ericsuzanne.com/">Eric M. Suzanne</a> [April 2015]</p>
 </body>
 </html>
