--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
 
   <style>
     html {
+      -webkit-align-items: center;
       align-items: center;
       background: url('images/cover.jpg') no-repeat fixed right;
       background-size: cover;
+      display: -webkit-flex;
       display: flex;
+      -webkit-flex-direction: column;
       flex-direction: column;
       height: 100%;
+      -webkit-justify-content: center;
       justify-content: center;
       font-family: sans-serif;
       font-size: 100%;
