--- a/index.html
+++ b/index.html
@@ -1,51 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html class='splash'>
 <head>
   <title>Riding SideSaddle*</title>
-
-  <style>
-    html {
-      -webkit-align-items: center;
-      align-items: center;
-      background: url('images/cover.jpg') no-repeat fixed right;
-      background-size: cover;
-      display: -webkit-flex;
-      display: flex;
-      -webkit-flex-direction: column;
-      flex-direction: column;
-      height: 100%;
-      -webkit-justify-content: center;
-      justify-content: center;
-      font-family: sans-serif;
-      font-size: 100%;
-      line-height: 1.5em;
-    }
-
-    body {
-      background: rgba(255, 255, 255, .75);
-      padding: 1rem;
-      text-align: center;
-      text-shadow: 0 1px 0 #fff;
-    }
-
-    h1 {
-      color: red;
-      font-size: 4rem;
-      font-size: 8vmin;
-      line-height: 4.5rem;
-      line-height: 9vmin;
-      margin: 0;
-    }
-
-    p {
-      margin: 0;
-    }
-
-    a {
-      color: #000;
-      font-weight: bold;
-    }
-  </style>
+  <link rel="stylesheet" href="css/book.css" />
 </head>
 <body>
   <h1>Riding SideSaddle*</h1>
