--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 
       <p class="p-description">
         <i>
+          Official book release,
           with special guests
           <a href="www.jkandtheloss.com">Jen Korte</a>
           and
