Initial setup for rstblog

--- a/index.html
+++ b/index.html
@@ -97,6 +97,14 @@
           </i>
         </cite>
       </blockquote>
+
+      <blockquote>
+        Rarely do you get to experience intimate thoughts like these.
+        It's like being dropped into someone's head,
+        Quantum Leap style,
+        in the middle of a transformative time in their life.
+        I won't deny, it definitely turned me on.
+      </blockquote>
     </article>
 
     <article class="details">
