--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
 
 <article class="release h-event section">
 <div class="section-inner">
+  <div class="call-to-action">
+    Join us for the
+    <a href="https://www.facebook.com/events/786303171446670/">release party</a>!
+  </div>
+
   <p class="presenters">
     <a href="http://teacupgorilla.com/">Teacup Gorilla</a>
     presents:
@@ -93,9 +98,6 @@
   </h2>
 
   <p class="p-summary">
-    Official
-    <a href="http://springgunpress.com">SpringGun Press</a>
-    book release,
     with special guests
     <a href="www.jkandtheloss.com">Jen Korte</a>
     and
@@ -128,17 +130,24 @@
   </blockquote>
 
   <p class="description">
-    <b>Riding SideSaddle*</b> is an
+    <b>Riding SideSaddle*</b> is
+    an
     <a href="https://github.com/ericam/ridingsidesaddle.net">open-source novel</a>
-    on note cards:
+    on note cards —
+    a fragmented memory of our time together,
+    and these bodies we inhabit —
     created by <a href="http://ericsuzanne.com">Eric Suzanne</a>,
     with contributions from
     <a href="http://jacobliechty.tumblr.com/">Jacob Liechty</a>,
     <a href="http://sondraedesign.tumblr.com/">Sondra Eby</a>,
     <a href="http://aaronliechty.tumblr.com/">Aaron Liechty</a>,
-    and others —
-    and published by
-    <a href="http://springgunpress.com">SpringGun Press</a>.
+    and others.
+    Published by
+    <a href="http://springgunpress.com">SpringGun Press</a>,
+    and made available under the
+    <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
+      Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License
+    </a>.
   </p>
 </div>
 </article><!-- Book Blurbs -->
@@ -150,7 +159,7 @@
 
   <figure class="blurb">
     <blockquote class="blurb-body">
-      <span class="open">“</span>A really, really good reading time! Eric has gathered all of the beauteous, ugly, and necessary parts together in one place. Graciously, he leaves us the pleasure of assembly without rules.<span class="close">”</span>
+      <span class="open">“</span>A really, really good reading time! Eric has gathered all the beauteous, ugly, and necessary parts together in one place. Graciously, he leaves us the pleasure of assembly without&nbsp;rules.<span class="close">”</span>
     </blockquote>
 
     <figcaption class="h-card blurb-cite">
@@ -173,7 +182,7 @@
 
   <figure class="blurb">
     <blockquote class="blurb-body">
-      <span class="open">“</span>Rarely do you get to experience intimate thoughts like these. It&#39;s like being dropped into someone&#39;s head, Quantum Leap style, for a transformative time in their life. I won&#39;t deny, it definitely turned me on.<span class="close">”</span>
+      <span class="open">“</span>Rarely do you get to experience such intimate thoughts. It's like being dropped into someone's head, Quantum Leap style, for a transformative time in their life. Super sexy. I won't deny, it turned me&nbsp;on.<span class="close">”</span>
     </blockquote>
 
     <figcaption class="h-card blurb-cite">
@@ -222,6 +231,9 @@
     <a href="http://spdbooks.org">
       Small Press Distribution
     </a>
+    <br />
+    Created using <b>OddBooks</b>
+    and released online by <a href="http://oddbird.net/">OddBird</a>
   </p>
 </footer>
 
