Add link to press kit

--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@
       [$7 cover]
     </li>
   </ul>
+
+  <a href="https://www.dropbox.com/sh/hernur1iocol84n/AADgWeHZLaCL0YuRA5MP6mMXa?dl=0" class="press-kit">
+    Get the <b>Press Kit</b>!
+  </a>
 </div>
 </article><!-- Book Intro -->
 
