--- a/index.html
+++ b/index.html
@@ -164,7 +164,13 @@
     </a>.
   </p>
 </div>
-</article><!-- Book Blurbs -->
+</article><!-- Box -->
+
+<a href="http://www.springgunpress.com/riding-sidesaddle-eric-suzanne/" class="box section">
+<b class="fake-button">
+  Get yours before we run out!
+</b>
+</a><!-- Book Blurbs -->
 
 
 <article class="blurbs section">
@@ -242,13 +248,7 @@
 </div>
 </article>
 
-<!-- Box -->
 
-<a href="http://www.springgunpress.com/riding-sidesaddle-eric-suzanne/" class="box section">
-<b class="fake-button">
-  Get yours before we run out!
-</b>
-</a>
 
 </main>
 
