--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 </article>
 <article class="oddbook section">
 <div class="section-inner">
-  <a href="http://oddbooksapp.com/book/ridingsidesaddle">
+  <a href="http://www.oddbooksapp.com/book/ridingsidesaddle">
     <?xml version="1.0" encoding="utf-8"?>
 <svg class='oddbooks-logo' version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 620 110">
 <rect width="100%" height="100%" fill="#fff"></rect>
@@ -165,14 +165,14 @@
 
   <p>
     Riding SideSaddle*
-    was written using the <a href="http://oddbooksapp.com">OddBooks</a> editor,
-    and is <a href="http://oddbooksapp.com/book/ridingsidesaddle">available online</a>
+    was written using the <a href="http://www.oddbooksapp.com">OddBooks</a> editor,
+    and is <a href="http://www.oddbooksapp.com/book/ridingsidesaddle">available online</a>
     with aditional multimedia features (still in development),
     including links, tags, animations, music,
     and tools for open-source collaboration.
   </p>
 
-  <a href="http://oddbooksapp.com/book/ridingsidesaddle" class="fake-button">
+  <a href="http://www.oddbooksapp.com/book/ridingsidesaddle" class="fake-button">
     Read it online!
   </a>
 </div>
