--- a/index.html
+++ b/index.html
@@ -163,10 +163,10 @@
     Midwest Tour
   </h3>
   <p class="p-summary">
-    This summer,
-    Teacup Gorilla is going on the road
-    with our intertwined novel and soon-to-be-released EP.
-    <a href="http://teacupgorilla.com/gorillamail">
+    Teacup Gorilla is on the road
+    with the novel and corresponding EP,
+    <a href="https://teacupgorilla.bandcamp.com/album/the-holes-they-leave">The Holes They Leave</a>.
+    <a href="http://teacupgorilla.com/gorillamail" style="display: inline-block;">
       Join our mailing list
     </a>
     to stay up to date!
