--- a/index.html
+++ b/index.html
@@ -109,18 +109,17 @@
   </h2>
 
   <p class="description">
-    <b>Riding SideSaddle*</b> is
-    a fragmented memory of our time together,
-    and these bodies we inhabit —
-    250 interchangeable index cards
+    <b>Riding SideSaddle*</b>
+    is a fragmented memory written on
+    250 interchangeable index cards —
     following a cast of friends as they navigate
     fluid genders, relationships,
     and bodies that resist order, category, or completion.
     Based loosely on the life of Margaret Clap,
-    and the myths of Hermaphroditus —
+    and the myth of Salmacis and Hermaphroditus —
     SideSaddle* is an
     <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
-      open-source novel
+      open-source text
     </a>
     published by
     <a href="http://springgunpress.com">SpringGun Press</a>,
@@ -130,8 +129,7 @@
     and adapted to the stage by
     <a href="http://buntport.com/archive/archive.htm">Buntport Theater</a>
     and
-    <a href="http://teacupgorilla.com">Teacup Gorilla</a>
-    (March, 2016).
+    <a href="http://teacupgorilla.com">Teacup Gorilla</a>.
   </p>
 </div>
 </article><!-- Excerpt -->
@@ -250,7 +248,7 @@
 
   <figure class="blurb">
     <blockquote class="blurb-body">
-      <span class="open">“</span>A really, really good reading time! Eric has gathered all of the beauteous, ugly, and necessary parts together in one place. The characters, ideas, story are exposed, raw, alive — merging masculine and feminine into some kind of mystical marriage. Graciously, Eric leaves us the pleasure of assembly without rules.<span class="close">”</span>
+      <span class="open">“</span>A really, really good reading time! Miriam has gathered all of the beauteous, ugly, and necessary parts together in one place. The characters, ideas, story are exposed, raw, alive — merging masculine and feminine into some kind of mystical marriage. Graciously, Miriam leaves us the pleasure of assembly without rules.<span class="close">”</span>
     </blockquote>
 
     <figcaption class="h-card blurb-cite">
@@ -394,7 +392,7 @@
 <footer role="contentinfo">
   <p class="copyright">
     <strong>Riding SideSaddle*</strong>
-    © 2016
+    © 2015-2016
     <a href="http://miriamsuzanne.com" class="p-name">
       (Eric) Miriam Suzanne
     </a>
